# time-it

./: Cargo.toml  README.md  cargo.toml  pull_request_template.md
examples/: simple.rs  with_msg.rs
src/: lib.rs
time-it/: Cargo.toml  README.md  expanded.rs  syntax_tree.txt
time-it-builder/: Cargo.toml
time-it-builder/src/: lib.rs
time-it-macros/: Cargo.toml  README.md
time-it-macros/src/: lib.rs
time-it/examples/: functions.rs  nested.rs  simple.rs  simple_custom.rs  simple_custom_sync.rs  tagging.rs  testing.rs
time-it/src/: lib.rs
