[package]
name = "time-it-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"]}
quote = "1.0"
uuid = {version = "1.3.3", features = ["v4", "fast-rng"]}
